# overthrow

./: .env.example  .gitignore  .travis.yml  AGENTS.md  Cargo.toml  DESIGN.md  README.md  TODO.md  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
app/: .gitignore  Cargo.toml  README.md  index.html
app/src/: layout.rs  main.rs
backend/: .env.example  .gitignore  pyproject.toml
backend/overthrow/: delay_middleware.py  settings.py  urls.py
backend/overthrow/games/: admin.py  coords.py  game_simulator.py  models.py  serializers.py  urls.py  views.py
backend/overthrow/users/: factories.py  serializers.py  urls.py  views.py
bot/: Cargo.toml
bot/src/: future_tree.rs  lib.rs  stats.rs  tactician.rs
bot/src/ml/: bot.rs  mod.rs  policy.rs  (+2 more)
bot/tests/: health.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
engine/: Cargo.toml
engine/src/: coords.rs  encoding.rs  game.rs  lib.rs  rng.rs
engine/tests/: invariants.rs
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.js  constants.js  coord.js  main.js
old/: .gitignore  README.md
old/frontend/: package-lock.json  package.json
old/overthrow/: delay_middleware.py  settings.py  urls.py  wsgi.py
overthrow/: settings.py  wsgi.py
overthrow/games/: coords.py  factories.py  game_simulator.py  models.py  urls.py
overthrow/users/: models.py  urls.py  views.py
src/: App.vue  main.js
src/components/: HexGrid.vue  HexTile.vue
(+48 files in other folders)
